--- a/index.html
+++ b/index.html
@@ -972,7 +972,7 @@
       // === Service Worker Registration (PWA - UNCHANGED as requested) ===
       if ('serviceWorker' in navigator) {
          window.addEventListener('load', () => { // Ensure SW registration happens after page load
-            navigator.serviceWorker.register('./service-worker.js') // Use relative path
+            navigator.serviceWorker.register('./serviceworker.js') // Use relative path
                .then(reg => console.log('ServiceWorker registered. Scope:', reg.scope))
                .catch(err => console.error('ServiceWorker registration failed:', err));
          });
